Bug 1172413 - Make the arrow overlap with the box of the tooltip; r=pbro
UltraBlame original commit: 3d4f379b47fc12812f5e21657b63c6f426f5a063

--- a/devtools/client/themes/dark-theme.css
+++ b/devtools/client/themes/dark-theme.css
@@ -1860,6 +1860,57 @@ panel
 panel
 -
 arrow
+{
+-
+-
+arrow
+-
+margin
+:
+-
+4px
+;
+}
+:
+root
+[
+platform
+=
+"
+win
+"
+]
+.
+theme
+-
+tooltip
+-
+panel
+.
+panel
+-
+arrow
+{
+-
+-
+arrow
+-
+margin
+:
+-
+7px
+;
+}
+.
+theme
+-
+tooltip
+-
+panel
+.
+panel
+-
+arrow
 [
 side
 =
@@ -1901,8 +1952,14 @@ margin
 -
 bottom
 :
+var
+(
 -
-4px
+-
+arrow
+-
+margin
+)
 ;
 }
 .
@@ -1956,8 +2013,14 @@ margin
 -
 top
 :
+var
+(
 -
-4px
+-
+arrow
+-
+margin
+)
 ;
 }
 .
@@ -2011,8 +2074,14 @@ margin
 -
 right
 :
+var
+(
 -
-4px
+-
+arrow
+-
+margin
+)
 ;
 }
 .
@@ -2066,8 +2135,14 @@ margin
 -
 left
 :
+var
+(
 -
-4px
+-
+arrow
+-
+margin
+)
 ;
 }
 media
