--- a/devtools/client/themes/light-theme.css
+++ b/devtools/client/themes/light-theme.css
@@ -1936,6 +1936,57 @@ panel
 panel
 -
 arrow
+{
+-
+-
+arrow
+-
+margin
+:
+-
+4px
+;
+}
+:
+root
+[
+platform
+=
+"
+win
+"
+]
+.
+theme
+-
+tooltip
+-
+panel
+.
+panel
+-
+arrow
+{
+-
+-
+arrow
+-
+margin
+:
+-
+7px
+;
+}
+.
+theme
+-
+tooltip
+-
+panel
+.
+panel
+-
+arrow
 [
 side
 =
@@ -1977,8 +2028,14 @@ margin
 -
 bottom
 :
+var
+(
 -
-4px
+-
+arrow
+-
+margin
+)
 ;
 }
 .
@@ -2032,8 +2089,14 @@ margin
 -
 top
 :
+var
+(
 -
-4px
+-
+arrow
+-
+margin
+)
 ;
 }
 .
@@ -2087,8 +2150,14 @@ margin
 -
 right
 :
+var
+(
 -
-4px
+-
+arrow
+-
+margin
+)
 ;
 }
 .
@@ -2142,8 +2211,14 @@ margin
 -
 left
 :
+var
+(
 -
-4px
+-
+arrow
+-
+margin
+)
 ;
 }
 media
